probando la interpolacion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,8 @@
 <!-- RECORDAR SIEMPRE PONER LOS COMPONENTES ACA! -->
 <app-header></app-header>
 <app-nav></app-nav>
-<app-dashboard></app-dashboard>
+
+<!-- <app-dashboard></app-dashboard> -->
+
+<router-outlet></router-outlet>
 <app-footer></app-footer>
