--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,6 @@
 <header class="fondo">
-  <h1 class="mensaje-bienvenida">¡BIENVENIDOS a nuestra App!</h1>
-  <h3>Es un placer ser parte de tu día a día</h3>
+
+  <h1 class="mensaje-bienvenida">{{mensajeBienvenida}}</h1>
+
+  <h3 class="mensaje2">{{mensaje2}}</h3>
 </header>
