--- a/src/app/pages/servicios/servicios.component.html
+++ b/src/app/pages/servicios/servicios.component.html
@@ -1,25 +1,4 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-2">
-      <nav class="nav flex-column">
-        <a class="nav-link " routerLink="/dashboard/operaciones">Operaciones</a>
-        <a class="nav-link " routerLink="/dashboard/transacciones">Transacciones</a>
-        <a class="nav-link " routerLink="/dashboard/criptomoneda">Criptomoneda</a>
-      </nav>
-    </div>
-    <div class="col-md-10">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
-</div>
-
-
-
-
-
-
-<!-- ESTO ESTABA ANTES  -->
-<!-- <section class="mt-5" id="services">
+<section class="mt-5" id="services">
   <div class="container">
       <div class="text-center">
           <h2 class="text-uppercase">Servicios</h2>
@@ -51,4 +30,4 @@
           </div>
       </div>
   </div>
-</section> -->
+</section>
