--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,12 +1,14 @@
-<footer class="py-2 bg-dark text-white ">
-  <div class="container">
-      <div class="row align-items-center">
-          <div class="col-lg-9 text-lg-start">Copyright &copy; 2024</div>
-          <div class="col-lg-3 my-3 my-lg-0">
-              <a class="btn btn-dark" href="#!"><i class="fab fa-twitter"></i></a>
-              <a class="btn btn-dark" href="#!"><i class="fab fa-facebook-f"></i></a>
-              <a class="btn btn-dark" href="#!"><i class="fab fa-linkedin-in"></i></a>
+<div class="fixed-bottom">
+  <footer class="py-2 bg-dark text-white ">
+      <div class="container">
+          <div class="row align-items-center">
+              <div class="col-lg-9 text-lg-start">Copyright &copy; 2024</div>
+              <div class="col-lg-3 my-3 my-lg-0">
+                  <a class="btn btn-dark" href="#!"><i class="fab fa-twitter"></i></a>
+                  <a class="btn btn-dark" href="#!"><i class="fab fa-facebook-f"></i></a>
+                  <a class="btn btn-dark" href="#!"><i class="fab fa-linkedin-in"></i></a>
+              </div>
           </div>
       </div>
-  </div>
-</footer>
+  </footer>
+</div>
