--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,33 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"   aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <p class="navbar-brand mb-2">Mi aplicación</p>
-    <div class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li *ngIf="estaAutenticado" class="nav-item">
-          <a class="nav-link" aria-current="page">HOME</a>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/home">HOME</a>
         </li>
-        <li  class="nav-item">
-          <a class="nav-link" aria-current="page">SERVICIOS</a>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/servicios">SERVICIOS</a>
         </li>
-        <li  class="nav-item">
-          <a class="nav-link" aria-current="page">¿QUIENES SOMOS?</a>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/quienes-somos">QUIENES SOMOS</a>
         </li>
-        <li *ngIf="!estaAutenticado" class="nav-item">
-          <a class="nav-link" aria-current="page">REGISTRARSE</a>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/registro">REGISTRO</a>
         </li>
-        <li *ngIf="!estaAutenticado" class="nav-item">
-          <a class="nav-link"  aria-current="page">INICIAR SESIÓN</a>
-        </li>
-        <li *ngIf="estaAutenticado" class="nav-item">
-          <a class="nav-link"  aria-current="page">CERRAR SESIÓN</a>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/iniciar-sesion">INICIAR SESIÓN</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-<ng-template #viewHome>
-
-</ng-template>
