--- a/src/app/pages/quienes-somos/quienes-somos.component.html
+++ b/src/app/pages/quienes-somos/quienes-somos.component.html
@@ -3,18 +3,30 @@
       <div class="text-center">
           <h2 class="section-heading text-uppercase">Nuestro Equipo</h2>
       </div>
+
       <div class="row">
-          <div class="col-md-4">
+        @for (profesional of profesionalList; track profesional.id)
+        {
+          <div class="col-md-3 mb-4">
               <div >
-                  <img class="rounded-circle img-fluid" src="assets\team\person 1.jpg" alt="..." />
-                  <h4>Federico</h4>
-                  <p class="text-muted">Desarrollador Web</p>
-                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                  <img class="img-fluid" [src]="profesional.photo" alt="Responsive image" />
+
+                  <h4>{{profesional.name}}</h4>
+
+                  <p class="text-muted">{{profesional.perfil}}</p>
+
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-github"></i></a>
                   <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                  <a class="btn btn-dark"  routerLink="/quienes-somos/1">Ver Perfil</a>
+                  <a class="btn btn-dark"  routerLink="/quienes-somos/1">Portfolio</a>
+
               </div>
-          </div>
+            </div>
+        }
+        @empty {
+          <p>There are no profesional items.</p>
+        }
+
+          <!-- </div>
           <div class="col-md-4">
               <div >
                   <img class="rounded-circle img-fluid" src="assets\team\person 3.jpg" alt="..." />
@@ -36,7 +48,7 @@
                   <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
                   <a class="btn btn-dark"  routerLink="/quienes-somos/3" >Ver Perfil</a>
               </div>
-          </div>
+          </div> -->
       </div>
   </div>
 </section>
