--- a/src/app/pages/servicios/servicios.component.html
+++ b/src/app/pages/servicios/servicios.component.html
@@ -1,13 +1,15 @@
 <section class="mt-5" id="services">
+  <button class="btn btn-warning" (click)="onSaludar()">Click Aquí!</button>
   <div class="container">
       <div class="text-center">
-          <h2 class="text-uppercase">Servicios</h2>
+          <h2 [class.bg-warning] = "bgPropertyValid" class="text-uppercase">Servicios</h2>
       </div>
       <div class="row text-center">
           <div class="col-md-4">
               <span class="fa-stack fa-4x">
                   <i class="fas fa-circle fa-stack-2x text-warning"></i>
                   <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+
               </span>
               <h4 class="my-3">Operaciones en Pesos y en Moneda Extranjera</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
@@ -28,6 +30,9 @@
               <h4 class="my-3">Criptomoneda</h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           </div>
+          <button class="btn btn-warning" (click)="onSaludar()">Click Aquí!</button>
       </div>
   </div>
+
+
 </section>
