se termina quienes-somos usando servicios

--- a/src/app/pages/quienes-somos/quienes-somos.component.html
+++ b/src/app/pages/quienes-somos/quienes-somos.component.html
@@ -1,32 +1,37 @@
 <section class="p-5 page-section bg-light" id="team">
   <div class="container">
-      <div class="text-center">
-          <h2 class="section-heading text-uppercase">Nuestro Equipo</h2>
+    <div class="text-center">
+      <h2 class="section-heading text-uppercase">Nuestro Equipo</h2>
+    </div>
+
+    <div class="row">
+      @for (profesional of profesionalList; track profesional.id)
+      {
+      <div class="col-md-3 mb-4">
+        <div>
+          <img class="img-fluid" [src]="profesional.photo" alt="Responsive image" />
+
+          <h4>{{profesional.name}}</h4>
+
+          <p class="text-muted">{{profesional.perfil}}</p>
+
+          <a class="btn btn-dark btn-social mx-2" [href]="profesional.githubLink" target="_blank"><i class="fab fa-github"></i></a>
+          <a class="btn btn-dark btn-social mx-2" [href]="profesional.linkedinLink" target="_blank"><i
+              class="fab fa-linkedin-in"></i></a>
+          <!-- <a class="btn btn-dark"  routerLink="/quienes-somos/1">Portfolio</a> -->
+          <!-- VER DE PONER UN ICONO AL PORTFOLIO -->
+
+        </div>
       </div>
+      }
+      @empty {
+      <p>There are no profesional items.</p>
+      }
+    </div>
+  </div>
+</section>
 
-      <div class="row">
-        @for (profesional of profesionalList; track profesional.id)
-        {
-          <div class="col-md-3 mb-4">
-              <div >
-                  <img class="img-fluid" [src]="profesional.photo" alt="Responsive image" />
-
-                  <h4>{{profesional.name}}</h4>
-
-                  <p class="text-muted">{{profesional.perfil}}</p>
-
-                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-github"></i></a>
-                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                  <a class="btn btn-dark"  routerLink="/quienes-somos/1">Portfolio</a>
-
-              </div>
-            </div>
-        }
-        @empty {
-          <p>There are no profesional items.</p>
-        }
-
-          <!-- </div>
+<!-- </div>
           <div class="col-md-4">
               <div >
                   <img class="rounded-circle img-fluid" src="assets\team\person 3.jpg" alt="..." />
@@ -49,7 +54,3 @@
                   <a class="btn btn-dark"  routerLink="/quienes-somos/3" >Ver Perfil</a>
               </div>
           </div> -->
-      </div>
-  </div>
-</section>
-
