--- a/src/app/pages/auth/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/pages/auth/iniciar-sesion/iniciar-sesion.component.html
@@ -1,1 +1,23 @@
-<p>iniciar-sesion works!</p>
+<div class="text-center">
+  <main class="form-signin">
+    <form [formGroup]="form" (ngSubmit)="onEnviar($event)">
+      <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+      <div class="form-floating">
+        <input type="email" formControlName="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email</label>
+      </div>
+      <div class="form-floating">
+        <input type="password" formControlName="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <label for="floatingPassword">Password</label>
+      </div>
+      <div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" value="remember-me"> Remember me
+        </label>
+      </div>
+      <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+      <p class="mt-5 mb-3 text-muted">&copy; 2024</p>
+    </form>
+  </main>
+</div>
+
