se modifica un archivo html

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,10 @@
 <h1>ESTE ES EL HOME</h1>
 
+<p>
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste perspiciatis dolores nobis cum corrupti asperiores aut impedit nesciunt veniam a explicabo, est repellat error placeat dolore facilis commodi laboriosam iusto.
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste perspiciatis dolores nobis cum corrupti asperiores aut impedit nesciunt veniam a explicabo, est repellat error placeat dolore facilis commodi laboriosam iusto.
+</p>
+
+<p>ESTO ES UNA PRUEBA</p>
+
 
