probado algunas funciones

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,5 +6,15 @@
 </p>
 
 <p>ESTO ES UNA PRUEBA</p>
+<h2 style="color: blueviolet;">prueba 1</h2>
+<p>
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste perspiciatis dolores nobis cum corrupti asperiores aut impedit nesciunt veniam a explicabo, est repellat error placeat dolore facilis commodi laboriosam iusto.
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste perspiciatis dolores nobis cum corrupti asperiores aut impedit nesciunt veniam a explicabo, est repellat error placeat dolore facilis commodi laboriosam iusto.
+</p>
 
+<h2 style="color: rgb(78, 236, 78);">prueba 2</h2>
+<p>
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste perspiciatis dolores nobis cum corrupti asperiores aut impedit nesciunt veniam a explicabo, est repellat error placeat dolore facilis commodi laboriosam iusto.
+  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste perspiciatis dolores nobis cum corrupti asperiores aut impedit nesciunt veniam a explicabo, est repellat error placeat dolore facilis commodi laboriosam iusto.
+</p>
 
