--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="fixed-bottom">
+<div class="bottom">
   <footer class="py-2 bg-dark text-white ">
       <div class="container">
           <div class="row align-items-center">
