--- a/src/app/pages/auth/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/pages/auth/iniciar-sesion/iniciar-sesion.component.html
@@ -12,11 +12,11 @@
       </div>
       <div class="checkbox mb-3">
         <label>
-          <input type="checkbox" value="remember-me"> Remember me
+          <input type="checkbox" value="remember-me"> Recuerdame
         </label>
       </div>
       <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-      <p class="mt-5 mb-3 text-muted">&copy; 2024</p>
+
     </form>
   </main>
 </div>
